--- a/05_deployment/airflow/airflow.cfg
+++ b/05_deployment/airflow/airflow.cfg
@@ -20,8 +20,8 @@ load_examples = False
 logging_config_class = airflow.utils.log.logging_config.LOGGING_CONFIG
 
 [database]
-# The SQLAlchemy connection string for your metadata database
-sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@postgres/airflow
+sql_alchemy_conn = postgresql+psycopg2://username:password@postgres:airflow/airflow
+
 
 [webserver]
 # The port to run the web server
