--- a/05_deployment/airflow/airflow.cfg
+++ b/05_deployment/airflow/airflow.cfg
@@ -1,30 +1,37 @@
 [core]
-# The folder where your airflow logs will be stored
-base_log_folder = /opt/airflow/logs
-# The format of log files
-log_filename_template = %d/%t.log
-# The folder where your task logs will be stored
-remote_base_log_folder =
-remote_log_conn_id =
-# The log level
-logging_level = INFO
+executor = LocalExecutor
+# Directorio donde se encuentran los DAGs
+dags_folder = /usr/local/airflow/dags
 
-[logging]
-# The logging level of the scheduler
-scheduler_log_level = INFO
-# The logging level of the webserver
-web_server_log_level = INFO
-# Ejecutar ejemplos de DAGs
-load_examples = False
-# Configuración del logging
-logging_config_class = airflow.utils.log.logging_config.LOGGING_CONFIG
+# Directorio donde se encuentran los plugins
+plugins_folder = /usr/local/airflow/plugins
+
+# Zona horaria por defecto
+default_timezone = utc
 
 [database]
-sql_alchemy_conn = postgresql+psycopg2://username:password@postgres:airflow/airflow
+# Cadena de conexión SQLAlchemy para la base de datos
+sql_alchemy_conn = postgresql+psycopg2://airflow_user:123456@postgres:5432/airflow_db
 
+[logging]
+# Nivel de log: DEBUG, INFO, WARNING, ERROR, CRITICAL
+logging_level = INFO
+
+# Directorio donde se almacenan los logs de Airflow
+base_log_folder = ./airflow/logs
+
+# Configuración de los archivos de log
+log_filename_template = "dag_id={{ ti.dag_id }}/run_id={{ ti.run_id }}/task_id={{ ti.task_id }}/attempt={{ try_number }}.log"
+
+# Nivel de log del scheduler
+scheduler_log_level = INFO
+
+# Nivel de log del webserver
+web_server_log_level = INFO
 
 [webserver]
-# The port to run the web server
+# Puerto para ejecutar el web server
 web_server_port = 8080
-# The secret key used to enable sessions
-secret_key = temporary_key
+
+# Llave secreta para habilitar sesiones
+secret_key = your_very_secret_key_here
