--- a/05_deployment/airflow/airflow.cfg
+++ b/05_deployment/airflow/airflow.cfg
@@ -1,37 +1,24 @@
 [core]
-executor = LocalExecutor
-# Directorio donde se encuentran los DAGs
-dags_folder = /usr/local/airflow/dags
-
-# Directorio donde se encuentran los plugins
-plugins_folder = /usr/local/airflow/plugins
-
-# Zona horaria por defecto
+executor = CeleryExecutor
+dags_folder = /opt/airflow/dags
+plugins_folder = /opt/airflow/plugins
 default_timezone = utc
 
 [database]
-# Cadena de conexión SQLAlchemy para la base de datos
 sql_alchemy_conn = postgresql+psycopg2://airflow_user:123456@postgres:5432/airflow_db
 
+[celery]
+broker_url = redis://redis:6379/0
+result_backend = db+postgresql+psycopg2://airflow_user:123456@postgres:5432/airflow_db
+
 [logging]
-# Nivel de log: DEBUG, INFO, WARNING, ERROR, CRITICAL
 logging_level = INFO
-
-# Directorio donde se almacenan los logs de Airflow
-base_log_folder = ./airflow/logs
-
-# Configuración de los archivos de log
+base_log_folder = /opt/airflow/logs
 log_filename_template = "dag_id={{ ti.dag_id }}/run_id={{ ti.run_id }}/task_id={{ ti.task_id }}/attempt={{ try_number }}.log"
-
-# Nivel de log del scheduler
 scheduler_log_level = INFO
-
-# Nivel de log del webserver
 web_server_log_level = INFO
 
 [webserver]
-# Puerto para ejecutar el web server
 web_server_port = 8080
-
-# Llave secreta para habilitar sesiones
 secret_key = your_very_secret_key_here
+
